--- a/app/assets/stylesheets/_icons.css.scss
+++ b/app/assets/stylesheets/_icons.css.scss
@@ -16,7 +16,6 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-
 .ico-thermometer:before {
 	content: "\e600";
 }
@@ -65,7 +64,7 @@
 .ico-route:before {
 	content: "\e60c";
 }
-.ico-info:before {
+.ico-info2:before {
 	content: "\e60d";
 }
 .ico-tie:before {
@@ -103,6 +102,33 @@
 }
 .ico-equalizer:before {
 	content: "\e61f";
+}
+.ico-home2:before {
+	content: "\e625";
+}
+.ico-drill:before {
+	content: "\e626";
+}
+.ico-lamp2:before {
+	content: "\e627";
+}
+.ico-plant:before {
+	content: "\e628";
+}
+.ico-camera:before {
+	content: "\e629";
+}
+.ico-flashlight2:before {
+	content: "\e624";
+}
+.ico-dolly:before {
+	content: "\e62a";
+}
+.ico-uniF53B:before {
+	content: "\e62b";
+}
+.ico-travel:before {
+	content: "\e62c";
 }
 .ico-leaf:before {
 	content: "\e611";
